@@ -1,3 +1,8 @@
+2009-11-30  Lluis Sanchez Gual  <lluis@novell.com>
+
+	* Mono.Debugging.Evaluation/ObjectValueAdaptor.cs: Prettify
+	  type names.
+
 2009-11-25  Lluis Sanchez Gual  <lluis@novell.com>
 
 	* Mono.Debugging.Client/StackFrame.cs: A frame should be
